# weefee_project

./: .gitignore  .gitmodules  LICENSE  README.md  launch_weefee.sh  launch_weefee_rviz.sh  weefee.sh
espidf/: CMakeLists.txt
espidf/main/: main.c
espidf/weefee_esp32/: .gitignore  sdkconfig.defaults
espidf/weefee_esp32/components/: .gitignore
espidf/weefee_esp32/components/micro_ros_espidf_component/: CHANGELOG.rst  CMakeLists.txt  README.md  esp32_toolchain.cmake.in  libmicroros.mk  package.xml
espidf/weefee_esp32/components/micro_ros_espidf_component/docker/: install_micro_ros_deps_script.sh
espidf/weefee_esp32/components/micro_ros_espidf_component/examples/int32_publisher_custom_transport_usbcdc/: README.md
espidf/weefee_esp32/components/micro_ros_espidf_component/examples/int32_publisher_custom_transport_usbcdc/main/: main.c
espidf/weefee_esp32/main/: CMakeLists.txt  Kconfig.projbuild  battery_monitor.c  battery_monitor.h  main.c  quadruped_kinematics.c  quadruped_kinematics.h  quadruped_robot.c  quadruped_robot.h  servo_controller.c  servo_controller.h
old_scripts_backup/: compare_optimizations.sh  debug_ros2_communication.sh  demonstrate_servo_angles.sh  diagnostic_robot.sh  launch_weefee.sh  test_servo_angles_communication.sh  test_servo_commander.sh  test_servo_commander_optimized.sh  test_servo_commander_optimized_en.sh  test_visualization_and_commands.sh  verify_servo_commander.sh
ros2_ws/src/weefee_node/: CMakeLists.txt  package.xml
ros2_ws/src/weefee_node/src/: quadruped_common.h  quadruped_inverse_kinematics.h  quadruped_kinematics_controller.cpp  quadruped_model_publisher.cpp  quadruped_visualizer.cpp  servo_commander.cpp
wiki/: Battery-Monitoring.md  Command-Reference.md  ESP32-Firmware.md  ESP32-Optimization.md  Gait-Patterns.md  Getting-Started.md  Home.md  Kinematics.md  ROS2-Control.md
(+6 files in other folders)
